--- a/TwitterApi/pom.xml
+++ b/TwitterApi/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>SampleProjects</artifactId>
+        <artifactId>SampleProject</artifactId>
         <groupId>com.learn.java</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>TwitterApi</artifactId>
-    <name>TwitterApi</name>
+    <name>${project.base.name}-TwitterApi</name>
 
     <dependencies>
         <dependency>
@@ -21,7 +22,6 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
