--- a/PdfWriter/pom.xml
+++ b/PdfWriter/pom.xml
@@ -2,24 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>SampleProjects</artifactId>
+        <artifactId>SampleProject</artifactId>
         <groupId>com.learn.java</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>PdfWriter</artifactId>
-    <name>PdfWriter</name>
+    <name>${project.base.name}-PdfWriter</name>
 
     <dependencies>
-
         <!--PDF handling API-->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
